app-in-apps/yaml/stablediffusion/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stable-diffusion-service
  namespace: ollama
  labels:
    app: stable-diffusion
spec:
  type: ClusterIP
  ports:
    - name: ui
      port: 8080
      protocol: TCP
      targetPort: 7860
  selector:
    app: stable-diffusion
