app-in-apps/yaml/stablediffusion/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stablediffusion-ingress
  namespace: ollama
  labels:
    app: stable-diffusion
  annotations:
    kubernetes.io/ingress.class: tailscale
spec:
  ingressClassName: tailscale
  rules:
    - host: image-gen.border-orfe.ts.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: stable-diffusion-service
                port:
                  name: ui
  tls:
    - hosts:
        - image-gen.border-orfe.ts.net
